# alya-chatbot

./: .env.examples  Cargo.toml  README.md
config/: chatbot_config.json
data/: learned_knowledge.json
src/: main.rs
