[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
scraper = "0.17"
html5ever = "0.26"
url = "2.4"
config = "0.13"
chrono = "0.4" 